--- a/RL_test_ENT_MAX.ipynb
+++ b/RL_test_ENT_MAX.ipynb
@@ -157,7 +157,40 @@
       "Total reward for episode 31: -88.40169612701408\n",
       "Total reward for episode 32: -87.2614927457689\n",
       "Total reward for episode 33: -82.53476174765471\n",
-      "Total reward for episode 34: -91.9056008451126\n"
+      "Total reward for episode 34: -91.9056008451126\n",
+      "Total reward for episode 35: -97.631847577163\n",
+      "Total reward for episode 36: -82.50881520175048\n",
+      "Total reward for episode 37: -82.48504325932596\n",
+      "Total reward for episode 38: -84.3933544723235\n",
+      "Total reward for episode 39: -89.16864400441486\n",
+      "Total reward for episode 40: -88.86984202371646\n",
+      "Total reward for episode 41: -86.06113508317692\n",
+      "Total reward for episode 42: -86.95669097958054\n",
+      "Total reward for episode 43: -85.70569701148858\n",
+      "Total reward for episode 44: -83.85786722903799\n",
+      "Total reward for episode 45: -84.40439176029238\n",
+      "Total reward for episode 46: -95.10336202214553\n",
+      "Total reward for episode 47: -78.11436585789383\n",
+      "Total reward for episode 48: -87.29621442318269\n",
+      "Total reward for episode 49: -94.39715660276487\n",
+      "Total reward for episode 50: -79.04152274941106\n",
+      "Total reward for episode 51: -81.9928331464\n",
+      "Total reward for episode 52: -85.09371098999395\n",
+      "Total reward for episode 53: -74.69109574041468\n",
+      "Total reward for episode 54: -81.7672666467764\n",
+      "Total reward for episode 55: -89.06435471282826\n",
+      "Total reward for episode 56: -86.06478174369158\n",
+      "Total reward for episode 57: -85.35177322237138\n",
+      "Total reward for episode 58: -83.31859624660966\n",
+      "Total reward for episode 59: -87.72407419183321\n",
+      "Total reward for episode 60: -75.43061488581712\n",
+      "Total reward for episode 61: -83.86228917896693\n",
+      "Total reward for episode 62: -77.66199775554321\n",
+      "Total reward for episode 63: -74.99041875527178\n",
+      "Total reward for episode 64: -77.82780814047675\n",
+      "Total reward for episode 65: -74.8593113409176\n",
+      "Total reward for episode 66: -81.25282957923581\n",
+      "Total reward for episode 67: -86.07021561407826\n"
      ]
     }
    ],
