--- a/plot_reward.ipynb
+++ b/plot_reward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,15 @@
     "        rewards_str = re.findall(pattern, text)\n",
     "        rewards = np.array(rewards_str, dtype=float)\n",
     "        return rewards\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Replace 'path_to_file.txt' with your actual file path\n",
     "rewards_array = extract_rewards('/Users/john_schafer/Downloads/CE291/RNN_reward_700.txt')\n",
     "rewards_array=rewards_array[1:]\n",
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.6 ('skmob')",
+   "display_name": "Python 3.11.7 ('info251')",
    "language": "python",
    "name": "python3"
   },
@@ -134,12 +142,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0c887e5e6bf535ba08c8da67952513bcc9b1718c13939616f6e9c85fff86dc2c"
+    "hash": "d2064303d263e1a3ceaaf815227a08219bcf9396a8cb60113be5ce3b525cf3c4"
    }
   }
  },
