--- a/RL_test_ENT_MAX.ipynb
+++ b/RL_test_ENT_MAX.ipynb
@@ -358,6 +358,8 @@
     }
    ],
    "source": [
+    "#PLOT TO CHANGE MAX & BAPTISTE\n",
+    "\n",
     "plt.figure(figsize=(14, 8))\n",
     "plt.plot(demand_profile, label='Demand', color=\"red\")\n",
     "plt.plot(-1 * solar_profile, label='Solar', color='green', marker='o')\n",
